--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/img/icone.png">
-   
+    
+    <link href = "https://github.com/Robson892/workisadeveloper/blob/main/codigo.js" rel = "stylesheet"/>
+    <script src = "https://github.com/Robson892/workisadeveloper/blob/main/codigo.js"></script>
     <title>WORKISA DEVELOPER</title>
 </head>
 <body>
