--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/img/icone.png">
     
-    <link href = "https://github.com/Robson892/workisadeveloper/blob/main/codigo.js" rel = "stylesheet"/>
+    <link href = "https://github.com/Robson892/workisadeveloper/blob/main/style.css" rel = "stylesheet"/>
     <script src = "https://github.com/Robson892/workisadeveloper/blob/main/codigo.js"></script>
     <title>WORKISA DEVELOPER</title>
 </head>
