--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <div class="logo">
-        <img class = "logo" src="./img/logo.png">
+        <img class = "logo" url("https://github.com/Robson892/workisadeveloper/blob/main/style.css")>
     </div>
 
     <div class="wrapper">
